# frontend/openapi.json
@@ -2918,6 +2918,20 @@
             }
           },
           {
+            "name": "view",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "enum": [
+                "all",
+                "active"
+              ],
+              "type": "string",
+              "default": "all",
+              "title": "View"
+            }
+          },
+          {
             "name": "offset",
             "in": "query",
             "required": false,
